Removed cx_freeze and pyqt4 dependencies from setup.py

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <a name="pingpung" class="anchor" href="#pingpung"><span class="octicon octicon-link"></span></a>PingPung</h3>
 
 <p>PingPung is a multi-platform graphical ping utility.</p>
+<img src="images/ppscreenshot.png">
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
