--- a/index.html
+++ b/index.html
@@ -32,12 +32,28 @@
 <a name="pingpung" class="anchor" href="#pingpung"><span class="octicon octicon-link"></span></a>PingPung</h3>
 
 <p>PingPung is a multi-platform graphical ping utility.</p>
-<img src="images/ppscreenshot.png">
+<a href="images/ppscreenshot.png"><img src="images/ppscreenshot.png"></a>
 
+<h2>Installation</h2>
+    <h3>Windows</h3>
+        <p>The Windows package is a ZIP file containing the executable and all its dependencies, including Qt4.  You just download and extract the ZIP anywhere you'd like, and run the (32 bit) exe file inside. </p>
+    <h3>Linux/Other *nix</h3>
+    <h4>Dependencies</h4>
+       <p>Pingpung only needs 2 things - Python 3 and PyQt4 </p>
+       <p>Unfortunately for all of us, PyQt4 is not installable via pip, and therefore cannot be auto-installed as a PingPung dependency.  You'll have to install PyQt4 using whatever method your distribution supports.  For Debian/Ubuntu users, this is just  </p>
+       <pre><code>sudo apt-get install python3-pyqt4</code></pre>
+
+    <h4>Python Package Index</h4>
+    <p>The simplest method is to run the install via 'pip', as in</p>
+    <pre><code>pip install pingpung</code></pre>
+    <p>and assuming you've got the dependencies above, just run the app with </p>
+    <pre><code>pingpung</code></pre>
+
+<!--
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
-</code></pre>
+</code></pre> -->
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
