--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <h2>Installation</h2>
     <h3>Windows</h3>
         <p>The Windows package is a ZIP file containing the executable and all its dependencies, including Qt4.  You just download and extract the ZIP anywhere you'd like, and run the (32 bit) exe file inside. </p>
+
     <h3>Linux/Other *nix</h3>
     <h4>Dependencies</h4>
        <p>Pingpung only needs 2 things - Python 3 and PyQt4 </p>
@@ -44,16 +45,16 @@
        <pre><code>sudo apt-get install python3-pyqt4</code></pre>
 
     <h4>Python Package Index</h4>
-    <p>The simplest method is to run the install via 'pip', as in</p>
-    <pre><code>pip install pingpung</code></pre>
-    <p>and assuming you've got the dependencies above, just run the app with </p>
-    <pre><code>pingpung</code></pre>
+        <p>The simplest method is to run the install via 'pip', as in</p>
+        <pre><code>pip install pingpung</code></pre>
+        <p>and assuming you've got the dependencies above, just run the app with </p>
+        <pre><code>pingpung</code></pre>
 
-<!--
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre> -->
+    <h4>Run from Source</h4>
+        <p>If you wish, you can always just fetch the source code and run it from there.  Install dependencies as described above.  You'll need to download it either by 'git clone' or simply downloading the source ZIP file.   </p>
+        <p>Once you've got the files extracted, just run</p>
+        <pre><code>python3 pingpung.py</code></pre>
+
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
