--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
             <small>Source Download</small>
             .tar.gz file
           </a>
-          <a href="" class="button">
+          <a href="https://github.com/RainDogSoftware/pingpung/releases/download/0.1.4/PingPung-0.1.4.zip" class="button">
             <small>Windows Download (32 Bit)</small>
-            Coming Soon
+            .zip file
           </a>
 
         </aside>
