restoring note about pip being down

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
           <h4>Python Package Index</h4>
           <p>The simplest method is to run the install via 'pip', as in</p>
-          <pre><code>pip install pingpung</code>(coming soon)</pre>
+          <pre><code>pip install pingpung</code>(Coming soon)</pre>
           <p>and assuming you've got the dependencies above, just run the app with </p>
           <pre><code>sudo pingpung</code></pre>
           <p><a href="#root">Why does PingPung need root?</a></p>
