--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
           <a name="root"></a>
           <h4>Why does PingPung require root privileges?</h4>
-          <p>Creating a raw socket with which to craft a ping packet is a fairly low-level operation.  Any IP-network capable operating system has a builtin ping program, and part of the reason for that is because the OS maker can <a href="http://en.wikipedia.org/wiki/Setuid">setuid</a> that program so the user doesn't need to have those privileges to run it.</p>
+          <p>Creating a raw socket with which to craft a ping packet is a fairly low-level operation.  Any IP-network capable operating system has a builtin ping program, and part of the reason for that is because the OS maker can <a href="http://en.wikipedia.org/wiki/Setuid">setuid</a> that program so the user doesn't need to have root privileges to run it.</p>
           <p>Technical stuff aside, it's because PingPung is designed to use its <em>own</em> ping system, not your operating system's, so it doesn't have the built-in permissions that your OS's ping program does.</p>
           <p>Feel free to inspect the code if you have any concerns.</p>
 
