update page title

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>PingPung by RainDogSoftware</title>
+    <title>PingPung - Multiplatform Graphical Ping Tool</title>
   </head>
 
   <body>
