fixing what I guess was a merge-related regression

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
           <pre><code>sudo apt-get install python3-pyqt4</code></pre>
 
           <h4>Python Package Index</h4>
-          <p>The simplest method is to run the install via 'pip', as in</p>
-          <pre><code>pip install pingpung</code>(Coming soon)</pre>
+          <p>The simplest method is to run the install via 'pip3', as in</p>
+          <pre><code>pip3 install pingpung</code></pre>
           <p>and assuming you've got the dependencies above, just run the app with </p>
           <pre><code>sudo pingpung</code></pre>
           <p><a href="#root">Why does PingPung need root?</a></p>
