--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <h2>Features</h2>
           <ul>
             <li>Multithreaded.  Can theoretically run over 65,000 simultaneous ping sockets without conflict</li>
-            <li>Multiplatform.  Runs on anything that can run Python3/PyGtk4</li>
+            <li>Multiplatform.  Runs on anything that can run Python3/PyQt4</li>
             <li>Live stats.  No more need to end the ping session to see totals and averages</li>
             <li>Tabbed layout allows multiple concurrent ping sessions with individual stats and logging</li>
             <li>Visual indicators (icon) for which tabs have running sessions</li>
